# inanna

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: .gitignore  project.yml
app/Inanna/: APIClient.swift  AppState.swift  CallEngine.swift  InannaApp.swift  Keychain.swift  Models.swift
app/Inanna/Views/: CallView.swift  ChatView.swift  CompanionEditView.swift  CompanionListView.swift  MemoriesView.swift  OnboardView.swift  PresetsView.swift  SetupView.swift
app/build-device/: info.plist
docs/: architecture.md  beta.md  requirements.md  research.md  voice-protocol.md
presets/: appa.yaml  bomi.yaml  byeol.yaml  doha.yaml  eomma.yaml  harin.yaml  haru.yaml  jiho.yaml  sein.yaml
scripts/: make-icons.py  qa.sh  start-sovits.sh  start-whisper.sh
server/: audio_tools.py  auth.py  billing.py  config.py  main.py  safety.py
server/chat/: compiler.py  onboard.py  orchestrator.py  relationship.py
server/companion/: card_import.py  presets.py  schema.py  store.py  templates.py
server/llm/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
server/memory/: db.py  recall.py  summarizer.py
server/tts/: __init__.py  base.py  edge.py  elevenlabs.py  sovits.py
server/voice/: pipeline.py  stt.py  vad.py
templates/: assistant.yaml  child.yaml  father.yaml  friend.yaml  lover.yaml  mother.yaml  older-sibling.yaml  younger-sibling.yaml
tests/: echo_sim.py  quality_gates.py  soak.py  unit.py  voice_e2e.py
web/: app.js  call.js  index.html  manifest.json  pcm-worklet.js  style.css
(+253 files in other folders)
